<resources>
    <string name="app_name">Lab8</string>
    <string name="burger_heading">Vote for Burgers</string>
    <string name="cheeseBurger">Cheeseburger</string>
    <string name="hamBurger">Hamburger</string>
    <string name="veggieBurger">Veggieburger</string>
    <string name="createButton">Create Burger</string>
    <string name="tomato">Tomato</string>
    <string name="onion">Onion</string>
    <string name="lettuce">Lettuce</string>
    <string name="pickle">Pickle</string>
    <string name="glutenFree">Gluten Free</string>
    <string name="storeButton">View Restaurant</string>
    <string name="messageToUser">Get burger at</string>
    <string name="choose">choose your own burger shop</string>
    <string name="goodTimes">Good Times Burgers and Fries</string>
    <string name="sink">The Sink</string>
    <string name="salt">SALT Bistro</string>
    <string name="with">with</string>
    <string name="beginning">You want a</string>
    <string-array name="friesSize">
        <item>Size of Fries</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="priceRange">
        <item>Price Preference</item>
        <item>$</item>
        <item>$$</item>
        <item>$$$</item>
    </string-array>
    <string name="title_activity_burger">BurgerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="reviewHint">Write a Review</string>
</resources>